--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </header>
 
   <section id="featured-property">
+    
     <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
     <p>Lorem ipsum dolor sit amet...</p>
     <p>Lorem ipsum dolor sit amet...</p>
@@ -37,6 +38,8 @@
       Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
     </video>
 </section>
-
+  <footer>
+    &copy; 2014 Exceptional Realty Group. All Rights Reserved.
+  </footer>
   </body>
 </html>
