--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <section id="featured-property">
-    
+    <figure>
     <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
     <p>Lorem ipsum dolor sit amet...</p>
     <p>Lorem ipsum dolor sit amet...</p>
