--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <section id="featured-property">
     <figure>
     <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+    <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - photo by Denise Richards</figcaption>
     <p>Lorem ipsum dolor sit amet...</p>
     <p>Lorem ipsum dolor sit amet...</p>
     </figure>
