--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- promo video -->
 <section id="promotional">
     <video controls>
+      <figure>
       <source src="videos/real-estate.mp4" type="video/mp4"> 
       <source src="videos/real-estate.ogv" type="video/ogg">
       Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
